force-app/main/default/objects/Payment__c/fields/Mode_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Payment__c</fullName>
    <label>Mode Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>POS-PineLabs</fullName>
            </value>
            <value>
                <fullName>RazorPay</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>