force-app/main/default/objects/Payment__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Payment Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>