force-app/main/default/objects/Payment__c/validationRules/paid_amount_cannot_be_less_than_2500.validationRule-meta.xml
<ValidationRule>
    <fullName>paid_amount_cannot_be_less_than_2500</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 2500</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Paid Amount Should be Greater than Paid Amount</errorMessage>
</ValidationRule>